controlsummery by date range
